@@ -110,6 +110,8 @@ dpkg (1.17.0) UNRELEASED; urgency=low
   * Support parsing compressed changelog files transparently. Closes: #684196
   * Sort files inside new diffs generated by dpkg-source lexicographically.
     Closes: #689193
+  * Add support for a build_arch option in Dpkg::Deps deps_parse().
+    Thanks to Colin Watson <cjwatson@ubuntu.com>. Closes: #697297
 
   [ Updated programs translations ]
   * Fix typo in Spanish translation of update-alternatives.
